syntax = "proto3";

package go.micro.service.product;

service Product {
  rpc AddProduct(ProductInfo) returns (ResponseProduct) {}
  rpc FindProductById(RequestId) returns (ProductInfo) {}
  rpc UpdateProduct(ProductInfo) returns (Response) {}
  rpc DeleteProduct(RequestId) returns (Response) {}
  rpc FindAllProduct(RequestAll) returns (ResponseProductList) {}
}

message ProductInfo {
  int64 id = 1;
  string product_name = 2;
  string product_sku = 3;
  double product_price = 4;
  string product_description = 5;
  repeated ProductImage product_images = 6;
  repeated ProductSize product_sizes = 7;
  ProductSeo product_seo = 8;
}

message ProductImage {
  int64 id = 1;
  string image_name = 2;
  string image_code = 3;
  string image_url = 4;
}

message ProductSize {
  int64 id = 1;
  string size_code = 2;
  string size_name = 3;
}

message ProductSeo {
  int64 id = 1;
  string seo_title = 2;
  string seo_keywords = 3;
  string seo_description = 4;
  string seo_code = 5;
}

message ResponseProduct {
  int64 product_id = 1;
}

message RequestId {
  int64 product_id = 1;
}

message Response {
  string message = 1;
}

message RequestAll {
}

message ResponseProductList {
  repeated ProductInfo product_info_list = 1;
}